--- a/src/index.pug
+++ b/src/index.pug
@@ -13,6 +13,7 @@ html(lang="en")
             //- include components/landing_page/landing_page.pug
             //- include components/signin-page/signin-page.pug
             //- include components/search-page/search-page.pug
-            include components/card-room/card-room.pug
+            //- include components/card-room/card-room.pug
+            include components/room-page/room-page.pug
 
 
