--- a/src/components/card-room/card-room.pug
+++ b/src/components/card-room/card-room.pug
@@ -1,17 +1,26 @@
-mixin card(originalLink, originalTitlenumber, price, level, quantity)
-  .card
-    .card-wrapper
-      .container
-          div(class="owl-carousel owl-theme fxSoftScale")
-             .item
-                 img(src= originalLink, alt= originalTitle )
-             .item
-                 img(src= originalLink, alt= originalTitle )
-      .row
-         h3= number
-         h4= price
-      .row
-         p= level
-         p= quantity
-           
-+card("http://placehold.it/1600x500/238f45/ffffff", "title", 123, 789709, 'iop', 'uiup')
+mixin card-room(number, price, feedback)
+    .card
+        img()
+        .card_container
+            .row.line
+                p(class="card-number") N  
+                    span=  number
+                p(class="card-price")= price  
+                    span(class="card-span")  в сутки
+            .row
+                .rate
+                    input(type="radio" id="star5" name="rating" value="5")
+                    label(for="star5" title="Outstanding")
+                    input(type="radio" id="star4" name="rating" value="4")
+                    label(for="star4" title="Very Good")
+                    input(type="radio" id="star3" name="rating" value="3")
+                    label(for="star3" title="Good")
+                    input(type="radio" id="star2" name="rating" value="2")
+                    label(for="star2" title="Poor")
+                    input(type="radio" id="star1" name="rating" value="1")
+                    label(for="star1" title="Very Poor")
+                p(class="card-price")= feedback
+                    span(class="card-span")   отзывов
+        
+
+//- +card-room( 888, 909, 45)
