--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,8 @@
 @import "../components/form-search/form-search.scss";
 @import "../components/search-page/search-page.scss";
 @import "../components/card-room/card-room.scss";
+@import "../components/room-page/room-page.scss";
+
 html,
 body {
   margin: 0;
