--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,217 +1,56 @@
-// .logo{
-//   background-image: url(../images/Logo.svg);
-//   width: 105.69px;
-//   height: 40px;
-//   background-repeat: no-repeat;
-// }
-
-// .logo-menu{
-//   margin: 36px 0;
-// }
-
-// .header ul {
-//   margin: 26px 0;
-//   padding: 0;
-//   list-style: none;
-//   overflow: hidden;
-// }
-
-// .header li a {
-//   display: block;
-//   text-decoration: none;
-//   @include text;
-//   color: $light-black-color;
-//   padding: 18px;
-//   //   
-//   font-weight: 900;
-
-// }
-
-// .menu > li:nth-child(2) > a:after{
-//   content: '';
-//   padding: 5px;
-// //   //set tickness
-//   box-shadow: 2px -2px 0 0 $black-text inset;
-//   display: inline-block;
-//   transform: rotate(-45deg);
-//   margin-left: 10px;
-//   color: $black-text;
-// }
-
-// .menu > li:nth-child(5) > a:after{
-//   content: '';
-//   padding: 5px;
-// //   //set tickness
-//   box-shadow: 2px -2px 0 0 $black-text inset;
-//   display: inline-block;
-//   transform: rotate(-45deg);
-//   margin-left: 10px;
-//   color: $black-text;
-// }
-
-// .header li a:hover,
-// .header .menu-btn:hover {
-//   background-color: #f4f4f4;
-// }
-
-// .header .logo {
-//   display: block;
-//   float: left;
-//   padding: 10px 20px;
-//   text-decoration: none;
-// }
-
-// /* menu */
-
-// .header .menu {
-//   clear: both;
-//   max-height: 0;
-//   transition: max-height .2s ease-out;
-// }
-
-// /* menu icon */
-
-// .header .menu-icon {
-//   cursor: pointer;
-//   display: inline-block;
-//   float: right;
-//   padding: 28px 20px;
-//   position: relative;
-//   user-select: none;
-//   top: -50px;
-//   left: 90%;
-
-// }
-
-// .header .menu-icon .navicon {
-//   background: #333;
-//   display: block;
-//   height: 2px;
-//   position: relative;
-//   transition: background .2s ease-out;
-//   width: 18px;
-//   margin-top: -50px;
-// }
-
-// .header .menu-icon .navicon:before,
-// .header .menu-icon .navicon:after {
-//   content: '';
-//   display: block;
-//   height: 100%;
-//   position: absolute;
-//   transition: all .2s ease-out;
-//   width: 100%;
-//   background-color: red;
-// }
-
-// .header .menu-icon .navicon:before {
-//   top: 5px;
-// }
-
-// .header .menu-icon .navicon:after {
-//   top: -5px;
-// }
-
-// /* menu btn */
-
-// .header .menu-btn {
-//   display: none;
-// }
-
-// .header .menu-btn:checked ~ .menu {
-//   max-height: 440px;
-// }
-
-// .header .menu-btn:checked ~ .menu {
-//   max-height: 440px;
-// }
-
-// .header .menu-btn:checked ~ .menu-icon .navicon {
-//   background: transparent;
-// }
-
-// .header .menu-btn:checked ~ .menu-icon .navicon:before {
-//   transform: rotate(-45deg);
-// }
-
-// .header .menu-btn:checked ~ .menu-icon .navicon:after {
-//   transform: rotate(45deg);
-// }
-
-// .header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
-// .header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
-//   top: 0;
-// }
-
-// .btn-link-menu{
-//   margin-right: 30px;
-//   margin-left: 15px;
-// }
-// /* 48em = 768px */
-
-// @media (min-width: 1290px) {
-
-//   .header li {
-//     float: left;
-//   }
-//   .header .menu {
-//     clear: none;
-//     float: right;
-//     max-height: none;
-//   }
-//   .header .menu-icon {
-//     display: none;
-//   }
-// }
-
-#logo {
-	background-image: url(../images/Logo.svg);
-	width: 105.69px;
-	height: 40px;
-	margin-top: 15px;
-	background-repeat: no-repeat;
-	display: block;
-	padding: 10px 0 0 30px;
-	float: left;
+.menu {
+  margin: 0;
+  padding: 0;
+  & after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  &__logo {
+    background-image: url(../images/Logo.svg);
+    width: 105.69px;
+    height: 40px;
+    margin-top: 15px;
+    background-repeat: no-repeat;
+    display: block;
+    padding: 10px 0 0 30px;
+    float: left;
+    &_toggle {
+      display: none;
+    }
+    &_drop {
+      display: none;
+    }
+  }
+  &__nav {
+    float: right;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    position: relative;
+    & li {
+      margin: 0px;
+      display: inline-block;
+      float: left;
+      & a {
+        display: block;
+        text-decoration: none;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 17px;
+        color: $black-text;
+        padding: 26px 20px;
+      }
+    }
+  }
 }
 
-nav{
-	margin:0;
-	padding: 0;
-	& after {
-		content:"";
-		display:table;
-		clear:both;
-	}
-	& ul {
-		float: right;
-		padding:0;
-		margin:0;
-		list-style: none;
-		position: relative;
-		& li {
-			margin: 0px;
-			display:inline-block;
-			float: left;
-			& a {
-				display:block;
-			  text-decoration:none;
-			  font-family: Montserrat;
-			  font-style: normal;
-			  font-weight: normal;
-			  font-size: 20px;
-			  line-height: 17px;
-			  color: $black-text;
-			  padding:26px 20px;	
-			}
-		}
-	}
-}
-
-nav li:nth-child(2) > a:after{
-  content: '';
+.menu li:nth-child(2) > a:after {
+  content: "";
   padding: 5px;
-//   //set tickness
+  //   //set tickness
   box-shadow: 2px -2px 0 0 $black-text inset;
   display: inline-block;
   transform: rotate(-45deg);
@@ -219,10 +58,10 @@ nav li:nth-child(2) > a:after{
   color: $black-text;
 }
 
-nav li:nth-child(5) > a:after{
-  content: '';
+.menu li:nth-child(5) > a:after {
+  content: "";
   padding: 5px;
-//   //set tickness
+  //   //set tickness
   box-shadow: 2px -2px 0 0 $black-text inset;
   display: inline-block;
   transform: rotate(-45deg);
@@ -230,63 +69,53 @@ nav li:nth-child(5) > a:after{
   color: $black-text;
 }
 
-.toggle,
-[id^=drop] {
-	display: none;
-}
-
-.btn-link-menu{
+.btn-link-menu {
   margin-right: 30px;
   margin-left: 15px;
   margin-top: 13px;
 }
 
-.btn-signup{
+.btn-signup {
   margin-top: 13px;
 }
-@media (max-width :1300px) {
-	#logo {
-		display: block;
-		padding: 20px 0 10px 0;
-		width: 100%;
-		text-align: center;
-		float: none;
-	}
-	nav {
-		margin: 0;
-		& ul{
-		    float: left;
-			width: 100%;
-			& li{
-				display: block;
-				width: 100%;
-				margin-top: -20px;
-			}
-		}
-	}
-	.toggle + a,
-	.menu {
-		display: none;
-	}
-	.toggle {
-		display: block;
-		padding:14px 20px;	
-		color: $violet-gradient;
-		font-size:17px;
-		text-decoration:none;
-		border:none;
-		cursor: pointer;
-	}
+@media (max-width: 1300px) {
+  .menu {
+    margin: 0;
+    &__logo {
+      display: block;
+      padding: 20px 0 10px 0;
+      width: 100%;
+      text-align: center;
+      float: none;
+      &_toggle {
+        display: block;
+        padding: 14px 20px;
+        color: $violet-gradient;
+        font-size: 17px;
+        text-decoration: none;
+        border: none;
+        cursor: pointer;
+        & a {
+          display: none;
+        }
+      }
+      &_drop:checked + ul {
+        display: block;
+      }
+    }
+    &__nav {
+      float: left;
+      width: 100%;
+      display: none;
+      & li {
+        display: block;
+        width: 100%;
+        margin-top: -20px;
+      }
+    }
+  }
 
-	[id^=drop]:checked + ul {
-		display: block;
-	}
-  
-  .btn-menu{
+  .btn-menu {
     margin-bottom: 10px;
   }
 }
-
-
-
-
