--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -42,3 +42,32 @@
   .line{
       border-bottom: 1px solid rgba(31, 32, 65, 0.1);
   }
+
+
+
+  :root {
+    --star-size: 24px;
+    --star-outline: #4CAF50 solid 1px;
+    --star-color: #fff;
+    --star-background:  #BC9CFF;
+  }
+  
+  .Stars {
+    --percent: calc(var(--rating) / 5 * 100%);
+    
+    display: inline-block;
+    font-size: var(--star-size);
+    font-family: Times; // make sure ★ appears correctly
+    line-height: 1;
+    
+    &::before {
+      content: '★★★★★';
+      letter-spacing: 3px;
+      background: linear-gradient(90deg, var(--star-background) var(--percent), var(--star-color) var(--percent));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      -webkit-text-stroke: 1px #BC9CFF;
+    }
+  }
+  
+  
