--- a/src/components/mixins.pug
+++ b/src/components/mixins.pug
@@ -52,3 +52,6 @@ mixin checkbox(name, label)
   input(type="checkbox" id= name name= name value= name)
   label(for= name)= label
   
+  
+mixin stars(style="--rating: level")
+   div(class="Stars" style= style)
