--- a/src/components/card-room/card-room.pug
+++ b/src/components/card-room/card-room.pug
@@ -1,3 +1,5 @@
+include ../mixins.pug
+
 mixin card-room(number, price, feedback)
     .card
         img()
@@ -8,19 +10,9 @@ mixin card-room(number, price, feedback)
                 p(class="card-price")= price  
                     span(class="card-span")  в сутки
             .row
-                .rate
-                    input(type="radio" id="star5" name="rating" value="5")
-                    label(for="star5" title="Outstanding")
-                    input(type="radio" id="star4" name="rating" value="4")
-                    label(for="star4" title="Very Good")
-                    input(type="radio" id="star3" name="rating" value="3")
-                    label(for="star3" title="Good")
-                    input(type="radio" id="star2" name="rating" value="2")
-                    label(for="star2" title="Poor")
-                    input(type="radio" id="star1" name="rating" value="1")
-                    label(for="star1" title="Very Poor")
+                +stars("--rating: 3")
                 p(class="card-price")= feedback
                     span(class="card-span")   отзывов
         
 
-//- +card-room( 888, 909, 45)
++card-room( 888, 909, 45)
