add datepicker with single input

--- a/src/components/card-room/card-room.pug
+++ b/src/components/card-room/card-room.pug
@@ -10,7 +10,7 @@ mixin card-room(number, price, feedback)
                 p(class="card-price")= price  
                     span(class="card-span")  в сутки
             .row
-                +stars("--rating: 3")
+                //- +stars("--rating: 3")
                 p(class="card-price")= feedback
                     span(class="card-span")   отзывов
         
