include slider in project

--- a/src/index.pug
+++ b/src/index.pug
@@ -15,7 +15,8 @@ html(lang="en")
             //- include components/signin-page/signin-page.pug
             //- include components/search-page/search-page.pug
             //- include components/card-room/card-room.pug
-            include components/room-page/room-page.pug
+            //- include components/room-page/room-page.pug
             //- include components/datepicker/datepicker.pug
+            include components/slider/slider.pug
 
 
