--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 @import "../components/search-page/search-page.scss";
 @import "../components/card-room/card-room.scss";
 @import "../components/room-page/room-page.scss";
+@import "../components/slider/slider.scss";
 
 html,
 body {
