--- a/src/components/mixins.pug
+++ b/src/components/mixins.pug
@@ -25,7 +25,11 @@ mixin radio-button(name)
 
 mixin card-room(number, price, feedback)
     .card
-        img()
+        div(id="carousel" class="owl-carousel")
+          div(class="item")
+            img(class="owl-lazy" data-src="https://cdn.britannica.com/s:300x300/88/137188-004-A05832DA.jpg" alt="")
+          div(class="item")
+            img(class="owl-lazy" data-src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRUmtXRoJ9zEe08pUDUCfAbCm3iPQmuzlWYaecBWe8-Ay_VDdq9ig" alt="")
         .card_container
             .row.line
                 p(class="card-number") N  
