--- a/src/index.pug
+++ b/src/index.pug
@@ -17,6 +17,8 @@ html(lang="en")
             //- include components/card-room/card-room.pug
             //- include components/room-page/room-page.pug
             //- include components/datepicker/datepicker.pug
-            include components/slider/slider.pug
+            //- include components/slider/slider.pug
+            include components/components-page/components-page.pug
+            
 
 
