--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -1,11 +1,10 @@
 
 @font-face {
-    font-family:  '8143';
+    font-family:  'OpenSans';
     src: 
-    url("fonts/Montserrat-Regular.eot") format("eot"),
-    url("fonts/Montserrat-Regular.woff") format("woff"),
-    url("fonts/Montserrat-Regular.ttf") format("truetype"),
-    url("fonts/Montserrat-Regular.svg#Samplino") format("svg");
+    url("fonts/subset-OpenSans.woff") format("woff"),
+    url("fonts/subset-OpenSans.ttf") format("truetype"),
+    url("fonts/subset-OpenSans.svg#Samplino") format("svg");
     }
 
 @font-face {
@@ -16,5 +15,5 @@
         url("fonts/8141.svg#Samplino") format("svg"),
         }
 body{
-    font-family: '8141', '8143';
+    font-family: 'OpenSans';
 }
