--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,8 @@
 @import "../components/card-room/card-room.scss";
 @import "../components/room-page/room-page.scss";
 @import "../components/slider/slider.scss";
+@import "../components/components-page/components-page.scss";
+
 
 
 html,
