--- a/src/components/variables.scss
+++ b/src/components/variables.scss
@@ -5,4 +5,7 @@ $black-text: rgba(31, 32, 65, 0.5);
 $light-black-color: rgba(31, 32, 65, 0.5);
 $white-color: #fff;
 $black-color:  #000000;
-
+$border-state: 1.5px solid rgba(31, 32, 65, 0.25);
+$border-focus: 1.5px solid rgba(31, 32, 65, 0.5);
+$black-darken: rgba(31, 32, 65, 0.75);
+$color-standart:rgba(31, 32, 65, 0.35);
