--- a/src/components/components-page/components-page.scss
+++ b/src/components/components-page/components-page.scss
@@ -4,7 +4,7 @@
   width: 425px;
   height: 59px;
   background: #ffffff;
-  border: 1.5px solid rgba(31, 32, 65, 0.25);
+  border: $border-state;
   box-sizing: border-box;
   border-radius: 5px;
   padding: 0 20px 0 20px;
@@ -14,7 +14,7 @@
     border: 1.5px solid rgba(31, 32, 65, 0.5);
     outline: none;
     &::placeholder {
-      color: rgba(31, 32, 65, 0.75);
+      color: $black-darken;
     }
   }
   &::placeholder {
@@ -23,9 +23,11 @@
     font-size: 18px;
     line-height: 18px;
     letter-spacing: 1.6px;
-    color: rgba(31, 32, 65, 0.35);
+    color: $color-standart;
   }
 }
+
+// Style for input with arrow
 .form__subscribe {
   width: 267px;
   height: 44px;
@@ -40,38 +42,89 @@
   background: #f1f1f1;
   box-sizing: border-box;
   background: #ffffff;
-  border: 1px solid rgba(31, 32, 65, 0.25);
+  border: $border-state;
   box-sizing: border-box;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
   border-right: none;
+  &::placeholder {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 18px;
+    letter-spacing: 1.6px;
+    color: $color-standart;
+  }
+  &:hover,
+  &:focus {
+    outline: none;
+    &::placeholder {
+      color: $black-darken;
+    }
+  }
 }
+  .form__subscribe button {
+    float: left;
+    width: 20%;
+    padding: 10px;
+    background: #fff;
+    color: #bc9cff;
+    font-size: 17px;
+    border: $border-state;
+    border-left: none;
+    cursor: pointer;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+  }
 
-.form__subscribe button {
-  float: left;
-  width: 20%;
-  padding: 10px;
-  background: #fff;
-  color: #bc9cff;
-  font-size: 17px;
-  border: 1px solid rgba(31, 32, 65, 0.25);
-  border-left: none;
-  cursor: pointer;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
+  .form__subscribe button:hover {
+    color: #bc9cff;
+    opacity: 0.7;
+  }
 
-.form__subscribe button:hover {
-  color: #bc9cff;
-  opacity: 0.7;
-}
+  .form__subscribe button:focus {
+    outline: none;
+  }
 
-.form__subscribe button:focus {
-  outline: 0;
-}
+  .form__subscribe::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
 
-.form__subscribe::after {
-  content: "";
-  clear: both;
-  display: table;
-}
+  // Styles for checkbox
+  .checkbox__box,
+  .checkbox__name {
+    display: block;
+    cursor: pointer;
+    &:before {
+      content: "\2714";
+      border-radius: 0.2em;
+      display: inline-block;
+      width: 26px;
+      height: 26px;
+      vertical-align: bottom;
+      color: transparent;
+      transition: 0.2s;
+      border: $border-state;
+      box-sizing: border-box;
+      border-radius: 4px;
+      margin-right: 10px;
+    }
+  }
+
+  .checkbox__box {
+    display: none;
+  }
+
+  .checkbox__name {
+    padding-left: 10px;
+  }
+  .checkbox__box + .checkbox__name:active:before {
+    transform: scale(0);
+  }
+
+  .checkbox__box:checked + .checkbox__name:before {
+    color: #bc9cff;
+    border: 1.5px solid #bc9cff;
+  }
