--- a/src/components/room-page/room-page.scss
+++ b/src/components/room-page/room-page.scss
@@ -71,53 +71,53 @@
   color: rgba(31, 32, 65, 0.5);
 }
 
-.checkbox__button{
-  & input[type="checkbox"] {
-  display: none;
-  }
-  & label {
-    color: #000;
-    cursor: default;
-    font-weight: normal;
-    line-height: 30px;
-    padding: 10px 0;
-    vertical-align: middle;
-    &::before{
-      content: " ";
-      color: #000;
-      display: inline-block;
-      /* шрифт Awesome*/
-      font: 20px/30px FontAwesome;
-      margin-right: 15px;
-      position: relative;
-      text-align: center;
-      text-indent: 0px;
-      background: #fff;
-      border: 1px solid #e3e3e3;
-      border-image: initial;
-      vertical-align: middle;
-      width: 20px;
-      height: 20px;
+// .checkbox__button{
+//   & input[type="checkbox"] {
+//   display: none;
+//   }
+//   & label {
+//     color: #000;
+//     cursor: default;
+//     font-weight: normal;
+//     line-height: 30px;
+//     padding: 10px 0;
+//     vertical-align: middle;
+//     &::before{
+//       content: " ";
+//       color: #000;
+//       display: inline-block;
+//       /* шрифт Awesome*/
+//       font: 20px/30px FontAwesome;
+//       margin-right: 15px;
+//       position: relative;
+//       text-align: center;
+//       text-indent: 0px;
+//       background: #fff;
+//       border: 1px solid #e3e3e3;
+//       border-image: initial;
+//       vertical-align: middle;
+//       width: 20px;
+//       height: 20px;
     
-      border: 1px solid rgba(31, 32, 65, 0.25);
-      box-sizing: border-box;
-      border-radius: 4px;
-    }
-  }
-}
+//       border: 1px solid rgba(31, 32, 65, 0.25);
+//       box-sizing: border-box;
+//       border-radius: 4px;
+//     }
+//   }
+// }
 
 
-input:checked + label:before {
-  /* глифон - галочка */
-  content: "\2714	";
-  color:  $violet-gradient;
-  border: 1px solid $violet-gradient;
-}
+// input:checked + label:before {
+//   /* глифон - галочка */
+//   content: "\2714	";
+//   color:  $violet-gradient;
+//   border: 1px solid $violet-gradient;
+// }
 
-input:disabled + label:before {
-  background: #eee;
-  color: #aaa;
-}
+// input:disabled + label:before {
+//   background: #eee;
+//   color: #aaa;
+// }
 
 
 .slider__range__price{
