--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,6 +18,8 @@ html,
 body {
   margin: 0;
   height: 100%;
+  font-family: "Open Sans";
+  letter-spacing: 1.5px;
 }
 
 .container {
@@ -106,9 +108,6 @@ a {
 }
 
 .radio-button {
-  position: relative;
-  margin-top: -30px;
-  margin-left: 10px;
   & ul {
     list-style: none;
     margin: 0;
@@ -125,23 +124,23 @@ a {
         display: block;
         position: absolute;
         border-radius: 100%;
-        height: 16px;
-        width: 16px;
+        height: 22px;
+        width: 22px;
         top: 30px;
         left: 20px;
         z-index: 5;
         transition: border 0.25s linear;
         -webkit-transition: border 0.25s linear;
-        border: 1px solid #8ba4f9;
+        border: $border-state;
         &::before {
           display: block;
           position: absolute;
           content: "";
           border-radius: 100%;
-          height: 10px;
-          width: 10px;
-          top: 2px;
-          left: 2px;
+          height: 14px;
+          width: 14px;
+          top: 4px;
+          left: 4px;
           margin: auto;
           transition: background 0.25s linear;
           -webkit-transition: background 0.25s linear;
@@ -152,6 +151,7 @@ a {
         visibility: hidden;
       }
       & label {
+        font-family: "Open Sans";
         display: block;
         position: relative;
         font-size: 20px;
