--- a/src/components/mixins.scss
+++ b/src/components/mixins.scss
@@ -19,7 +19,7 @@
   border-radius: 4px;
   margin-bottom: 10px;
   &::placeholder {
-    font-family: Montserrat;
+    font-family: "Open Sans";
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
