--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -40,7 +40,7 @@
         padding-bottom: 10px;
     }
 }
-.svg-inline--fa{
+.footer .svg-inline--fa{
     font-size: 27px;
 line-height: 23px;
 /* identical to box height */
