--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -52,7 +52,7 @@
       transform: translateY(-50%);
       background: rgba(255, 255, 255, 0.38) !important;
   }
-  span {
+  .owl-nav span {
       font-size: 70px;    
       position: relative;
       top: -5px;
