pixel perfect signin form

--- a/src/components/form-register/form-register.pug
+++ b/src/components/form-register/form-register.pug
@@ -1,9 +1,9 @@
 include ../mixins.pug
 
 .wrap
-  .container-form
+  .container__form
       h1(
-        class="title main-title"
+        class="title title__main"
       ) Регистрация аккаунта
 
       +input-text("Имя")
