--- a/css/main_ui.css
+++ b/css/main_ui.css
@@ -14,10 +14,9 @@
   border: 1px solid rgba(31, 32, 65, 0.5);
 }
 
-.button.first-click {
+/* .button.first-click {
   width: 99px;
   height: 44px;
-  /* Primary Gradient */
   background: -webkit-gradient(linear, left top, left bottom, from(#bc9cff), to(#8ba4f9));
   background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
   border-radius: 22px;
@@ -27,7 +26,6 @@
   font-weight: bold;
   font-size: 12px;
   line-height: 15px;
-  /* identical to box height */
   text-transform: uppercase;
   color: #ffffff;
 }
@@ -35,7 +33,7 @@
 .button.second-click {
   width: 99px;
   height: 44px;
-  /* Primary Gradient */
+
   background: -webkit-gradient(linear, left top, left bottom, from(#bc9cff), to(#8ba4f9));
   background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
   opacity: 0.5;
@@ -46,7 +44,7 @@
   font-weight: bold;
   font-size: 12px;
   line-height: 15px;
-  /* identical to box height */
+
   text-transform: uppercase;
   color: #ffffff;
 }
@@ -62,7 +60,7 @@
   font-weight: bold;
   font-size: 12px;
   line-height: 15px;
-  /* identical to box height */
+
   text-transform: uppercase;
   color: #bc9cff;
 }
@@ -79,10 +77,10 @@
   font-weight: bold;
   font-size: 12px;
   line-height: 15px;
-  /* identical to box height */
+
   text-transform: uppercase;
   color: #bc9cff;
-}
+} */
 
 .tgl {
   display: none;
