--- a/src/components/form-register/form-register.scss
+++ b/src/components/form-register/form-register.scss
@@ -1,15 +1,16 @@
   
   .wrap{
-    width: 380px;
+    width: 505px;
     background: #FFFFFF;
     border: 1px solid rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+    margin: 0 auto;
   }
 
-  .container-form{
-    padding: 40px 30px 30px 30px;
+  .container__form{
+    padding: 32px 30px 40px 40px;
   }
 
   .flex{
