--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,9 +1,15 @@
+include ../mixins.pug
 footer.footer.container
   .footer__nav
     .footer__nav__block
       .logo(class="footer__block logo")
+      div
+        p(style='white-space:pre;')
+          | Бронирование номеров в лучшем 
+          | отеле 2019 года по версии
+          | ассоциации «Отельные взгляды»
     .footer__nav__block
-      h3(class="footer__block title") Навигация
+      h3(class="footer__block footer__title") Навигация
       ul
         li 
           a О нас
@@ -14,7 +20,7 @@ footer.footer.container
         li
           a Услуги
     .footer__nav__block
-      h3(class="footer__block title") О нас
+      h3(class="footer__block footer__title") О нас
       ul
         li 
           a О сервисе
@@ -25,7 +31,7 @@ footer.footer.container
         li 
           a Инвесторы
     .footer__nav__block
-      h3(class="footer__block title") Служба поддержки
+      h3(class="footer__block footer__title") Служба поддержки
       ul
         li 
           a Соглашения
@@ -34,9 +40,11 @@ footer.footer.container
         li
           a Связь с нами
     .footer__nav__block
-      h3(class="footer__block title") Подписка
-      p Получайте специальныe
-      input(class="input-footer" placeholder="Email")
+      h3(class="footer__block footer__title") Подписка
+      p(style='white-space:pre;')
+        | Получайте специальные
+        | предложения и новости сервиса
+      +input-subscription("Email")
   .footer__details.container
       .footer__details__copyright Copyright &copy; 2018 Toxin отель. Все права зачищены.
       ul.about-list.row
