--- a/src/components/mixins.scss
+++ b/src/components/mixins.scss
@@ -5,9 +5,8 @@
 
 @mixin logo {
   background-image: url(../images/Logo.svg);
-  width: 105.69px;
-  height: 40px;
   background-repeat: no-repeat;
+  width: 5em; height: 2em;
 }
 
 @mixin input_text {
@@ -73,14 +72,16 @@
 }
 
 @mixin btn-small-violet {
-  letter-spacing: 1.8px;
+  font-family: "OpenSans-Bold";
+  letter-spacing: 1.3px;
   border: none;
-  padding: 15px 35px;
+  padding: 10px 30px;
   background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
-  border-radius: 22px;
+  border-radius: 30px;
   text-transform: uppercase;
   color: $white-color;
   font-weight: bold;
+  font-size: 15.5px;
 }
 
 @mixin title {
